# SE3_Controller

./: CMakeLists.txt  LICENSE  README.md  package.xml  takeoff.sh
config/: MavrosControllers.cfg  geometric_controller_config.yaml  mavros_controllers_config.yaml
include/geometric_controller/: common.h  geometric_controller.h  jerk_tracking_control.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h
include/mavros_controllers/: common.h  control.h  controller_manager.h  jerk_tracking_control.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h
launch/: controller.launch  geometric_controller.launch
rviz/: config_file.rviz
scripts/: land.sh
src/: controller_manager.cpp  geometric_controller.cpp  geometric_controller_node.cpp  jerk_tracking_control.cpp  main.cpp  nonlinear_attitude_control.cpp  nonlinear_geometric_control.cpp
