<?xml version="1.0"?>
<package>
  <name>mavros_controllers</name>
  <version>1.3.0</version>
  <description>controllers for UAVs using differential flatness-based trajectory tracking</description>

  <maintainer email="nanwan2004@126.com">Nanwan</maintainer>
  <author email="nanwan2004@126.com">Nanwan</author>

  <license>BSD-3-Clause</license>

  <build_depend>dynamic_reconfigure</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>eigen_catkin</build_depend>
  
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_extras</run_depend>
  <run_depend>mavros_msgs</run_depend>

  <export>
  </export>
</package>
